fixed spacing and css styling

--- a/starter_code/style.css
+++ b/starter_code/style.css
@@ -1,3 +1,48 @@
+/*============================================================*/
+/*I'M SORRY MY CSS LOOKS LIKE A PILE OF POOP 									*/
+/*░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░██▓░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░▓███▒░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░▓█████░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░███████░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░▓████████░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░██████████░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░▒██████████▓░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░███████████░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░▓███████████░░░░░░░░░░░░░░
+░░░░░░░░░░░░▒█████████████░░░░░░░░░░░░░░
+░░░░░░░░░░░▒██████████████▓▒░░░░░░░░░░░░
+░░░░░░░░░░░██████████████████░░░░░░░░░░░
+░░░░░░░░░░▒███████████████████░░░░░░░░░░
+░░░░░░░░░░▓███████████████████▒░░░░░░░░░
+░░░░░░░░░░▓███▓▓█████████▓▓███▒░░░░░░░░░
+░░░░░░░░░░░██░░░░███████▒░░░▓█░░░░░░░░░░
+░░░░░░░░░▓██░░██░░█████▒░██▓░██▒░░░░░░░░
+░░░░░░░░███▓░████░▓████░▓███░▒███░░░░░░░
+░░░░░░░▓███▒░████░▓████░████▒░███▒░░░░░░
+░░░░░░░████▒░████░▓████░████░░████░░░░░░
+░░░░░░░████▓░████░█████░▒███░░████░░░░░░
+░░░░░░░█████░░██░░█████▒░██░░█████░░░░░░
+░░░░░░░██████░░░░▓██████░░░░▒█████░░░░░░
+░░░░░░░███████▒▒█████████▓▒██████▓░░░░░░
+░░░░░▓█████████████████████████████▓░░░░
+░░░░█████████████████████████████████░░░
+░░░▒███████████░░░▒▒▒▒▒░░░▓██████████▒░░
+░░░████████████▓░░░░░░░░░▓████████████░░
+░░░██████████████▒░░░░░▒██████████████░░
+░░░███████████████████████████████████░░
+░░░██████████████████████████████████▒░░
+░░░▒█████████████████████████████████░░░
+░░░░▓██████████████████████████████▒░░░░
+░░░░░░▓███▒░░░░░░▒▓▓███████████▓▒░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░*/
+/*============================================================*/
+
+
+
 /*-------- Utility Styles --------*/
 * {
 	box-sizing: border-box;
@@ -5,6 +50,7 @@
 	http://www.w3schools.com/cssref/css3_pr_box-sizing.asp */
 	font-family: 'Proza Libre', sans-serif;
 	padding: 5px;
+	border-radius: 5px;
 
 }
 
@@ -35,30 +81,6 @@ h1 {
 	width: auto;
 }
 
-.formSection{
-	float: left;
-	border: 2px solid #C8DBB3;
-	border-radius: 25px;
-	background: #E3E6EC;
-	width: 500px;
-	align-items: center;
-}
-
-.results{
-	float: right;
-	background: #C8DBB3;
-	padding: none;
-	margin: none;
-	border-radius: 25px;
-}
-
-.formGroup {
-	/*display: inline-block;*/
-}
-
-.row{
-
-}
 /*-------- Form Styles --------*/
 
 
@@ -92,8 +114,35 @@ h1 {
 
 
 */
+
+.formSection{
+	float: left;
+	border: 2px solid #C8DBB3;
+	border-radius: 25px;
+	background: #E3E6EC;
+	width: 500px;
+	align-items: center;
+}
+
+.formGroup {
+	display: inline-block;
+	width: 100%;
+}
+
+.row{
+ padding: 14px;
+ margin: auto;
+ width: 100%;
+}
+
 .row input[type=submit] {
-  background: rgba(39,208,127, 50%);
+  background: rgba(39,208,127, .5);
+	float: right;
+	font-size: 30px;
+}
+.row input[type=submit]:hover {
+  background: rgba(39,208,127, .1);
+	float: right;
 }
 .formGroup input[type=textarea]{
 	height: 100px;
@@ -108,3 +157,11 @@ h1 {
 	The results container should have a background color of #C8DBB3, and comfortable padding around the text.
 
 */
+
+.results{
+	float: right;
+	background: #C8DBB3;
+	padding: none;
+	margin: none;
+	border-radius: 25px;
+}
